crates/pgt_cli/tests/snapshots/assert_check__check_junit_reporter_snapshot.snap
---
source: crates/pgt_cli/tests/assert_check.rs
expression: "run_check(&[\"--reporter\", \"junit\", \"tests/fixtures/test.sql\"])"
snapshot_kind: text
---
status: failure
stdout:
<?xml version="1.0" encoding="UTF-8"?>
<testsuites name="PostgresTools" tests="1" failures="1" errors="1" time="<duration>">
    <testsuite name="tests/fixtures/test.sql" tests="1" disabled="0" errors="0" failures="1" package="org.pgt">
        <testcase name="org.pgt.syntax" line="1" column="1">
            <failure message="Invalid statement: syntax error at or near &quot;tqjable&quot;">line 0, col 0, Invalid statement: syntax error at or near &quot;tqjable&quot;</failure>
        </testcase>
    </testsuite>
</testsuites>
stderr:
check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
